#7 Replace deprecated reflection function call.