@@ -4,6 +4,7 @@ import org.ieee11073.sdc.biceps.model.participant.AbstractContextState;
 import org.ieee11073.sdc.biceps.model.participant.AbstractDescriptor;
 import org.ieee11073.sdc.biceps.model.participant.AbstractState;
 
+import java.lang.reflect.InvocationTargetException;
 import java.math.BigInteger;
 
 /**
@@ -11,25 +12,25 @@ import java.math.BigInteger;
  */
 public class MockModelFactory {
     public static <T extends AbstractDescriptor> T createDescriptor(String handle, Class<T> type)
-            throws IllegalAccessException, InstantiationException {
+            throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         return createDescriptor(handle, BigInteger.ZERO, type);
     }
 
     public static <T extends AbstractDescriptor> T createDescriptor(String handle, BigInteger version, Class<T> type)
-            throws IllegalAccessException, InstantiationException {
-        T instance = type.newInstance();
+            throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        T instance = type.getDeclaredConstructor().newInstance();
         instance.setHandle(handle);
         instance.setDescriptorVersion(version);
         return instance;
     }
 
     public static <T extends AbstractState> T createState(String handle, Class<T> type)
-            throws IllegalAccessException, InstantiationException {
+            throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         return createState(handle, BigInteger.ZERO, BigInteger.ZERO, type);
     }
 
     public static <T extends AbstractState> T createState(String handle, BigInteger stateVersion, Class<T> type)
-            throws IllegalAccessException, InstantiationException {
+            throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         return createState(handle, stateVersion, BigInteger.ZERO, type);
     }
 
@@ -37,8 +38,8 @@ public class MockModelFactory {
                                                           BigInteger stateVersion,
                                                           BigInteger descriptorVersion,
                                                           Class<T> type)
-            throws IllegalAccessException, InstantiationException {
-        T instance = type.newInstance();
+            throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        T instance = type.getDeclaredConstructor().newInstance();
         instance.setDescriptorHandle(handle);
         instance.setStateVersion(stateVersion);
         instance.setDescriptorVersion(descriptorVersion);
@@ -46,7 +47,7 @@ public class MockModelFactory {
     }
 
     public static <T extends AbstractContextState> T createContextState(String handle, String descrHandle, Class<T> type)
-            throws IllegalAccessException, InstantiationException {
+            throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         return createContextState(handle, descrHandle, BigInteger.ZERO, BigInteger.ZERO, type);
     }
 
@@ -54,7 +55,7 @@ public class MockModelFactory {
                                                                         String descrHandle,
                                                                         BigInteger stateVersion,
                                                                         Class<T> type)
-            throws IllegalAccessException, InstantiationException {
+            throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         return createContextState(handle, descrHandle, stateVersion, BigInteger.ZERO, type);
     }
 
@@ -63,8 +64,8 @@ public class MockModelFactory {
                                                                         BigInteger stateVersion,
                                                                         BigInteger descriptorVersion,
                                                                         Class<T> type)
-            throws IllegalAccessException, InstantiationException {
-        T instance = type.newInstance();
+            throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        T instance = type.getDeclaredConstructor().newInstance();
         instance.setHandle(handle);
         instance.setDescriptorHandle(descrHandle);
         instance.setStateVersion(stateVersion);
